--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.3.1",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-scroll-behavior": "^0.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
